--- a/invoice.html.template
+++ b/invoice.html.template
@@ -6,12 +6,103 @@
     <title>Invoice {{ id }}</title>
 
     <style>
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        font-family: "bboron", sans-serif;
+        font-size: 16px;
+        line-height: 1.5;
+        margin: 0;
+        padding: 0;
+        /* max width A4 */
+        width: 21cm;
+        max-width: 21cm;
+        /* max height A4 */
+        height: 29.7cm;
+        max-height: 29.7cm;
+        /* padding for A4 */
+        margin: 1cm;
+        border: 1px solid red;
+      }
+      h1,
+      h2,
+      h3,
+      th {
+        font-family: "bboron", sans-serif;
+      }
+
       header {
         text-align: center;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+      }
+      header h1 {
+        margin-bottom: 0;
+      }
+      header .date {
+        font-size: 0.8em;
+        color: #999;
+      }
+      header .amount {
+        font-size: 2em;
+        font-weight: bold;
+      }
+
+      main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      main hr {
+        width: 70%;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        border: none;
+        border-bottom: 1px solid #ccc;
+      }
+
+      .contact-info {
+        width: 80%;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        border-collapse: collapse;
+      }
+      .contact-info th {
+        text-align: left;
+        font-size: 0.8em;
+        color: #999;
+      }
+      .contact-info td {
+        padding: 0.5rem;
+      }
+
+      .items {
+        width: 80%;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        border-collapse: collapse;
+      }
+      .items th {
+        text-align: left;
+        font-size: 0.8em;
+        color: #999;
+      }
+      .items td {
+        padding: 0.5rem;
+      }
+    </style>
+    <!-- print style -->
+    <style media="print">
+      body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
       }
     </style>
   </head>
@@ -38,10 +129,11 @@
       </span>
     </header>
     <main>
+      <hr />
       <table class="contact-info">
         <tr>
-          <th>From</th>
-          <th>To</th>
+          <th>FROM</th>
+          <th>TO</th>
         </tr>
         <tr class="name">
           <td>{{ from.name }}</td>
@@ -56,6 +148,7 @@
           <td>{{ to.address }}</td>
         </tr>
       </table>
+      <hr />
       <table class="items">
         <tr>
           <th>Item</th>
