add script to wait for fonts to load (this might help PDF generate properly - sometimes it generates without font)

--- a/invoice.html.template
+++ b/invoice.html.template
@@ -113,6 +113,10 @@
         border: none;
       }
     </style>
+    <script>
+      func = async () => await page.evaluate(() => document.fonts.ready);
+      func();
+    </script>
   </head>
 
   <body>
