--- a/invoice.html.template
+++ b/invoice.html.template
@@ -86,6 +86,7 @@
         margin-top: 1rem;
         margin-bottom: 1rem;
         border-collapse: collapse;
+        table-layout: fixed;
       }
       .contact-info th {
         text-align: left;
